--- a/tenkai_next/styles/styles.css
+++ b/tenkai_next/styles/styles.css
@@ -6,3 +6,15 @@ html, body, #__next  {
     height: 100%;
     width: 100%;
 }
+
+
+*:focus {
+    outline: 0 !important;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) !important;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none; 
+}
