--- a/tenkai_next/styles/styles.css
+++ b/tenkai_next/styles/styles.css
@@ -3,7 +3,7 @@
 html, body, #__next  {
     margin: 0;
     padding: 0;
-    height: 100%;
+    min-height: 100vh;
     width: 100%;
 }
 
@@ -17,4 +17,13 @@ html, body, #__next  {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none; 
+}
+
+::-webkit-scrollbar {
+    width: 1rem;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: gray;
+    border-radius: 100vw;
 }
