--- a/tenkai_next/styles/styles.css
+++ b/tenkai_next/styles/styles.css
@@ -7,6 +7,7 @@ html, body, #__next  {
     width: 100%;
 }
 
+/* customized scroll bar */
 
 *:focus {
     outline: 0 !important;
@@ -28,6 +29,8 @@ html, body, #__next  {
     background-color: gray;
     border-radius: 100vw;
 }
+
+/* necessary css for tooltip */
 
 #arrow,
 #arrow::before {
@@ -61,4 +64,11 @@ html, body, #__next  {
   
   #tooltip[data-popper-placement^='right'] > #arrow {
     left: -4px;
+  }
+
+  /* centered all embed tweet */
+  
+  #tweet-container div {
+    display: flex;
+    justify-content: center;
   }
